--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 
 .main{
 	/*background-color: #f9f9f6;*/
-	background: url('background.jpg');
+	background: url('img/background.jpg');
 	background-size: cover;
 	background-position: center;
 	height: 100%;
